--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 h1 
 {
 text-align: center;
-    font: 20px Arial;
+    font: 30px Arial;
+	column-span: all;
 }
 body 
 {
  column-count: 4;   
+}
+h2
+{
+font-size: 15px;	
 }
 p
 {
