--- a/index.css
+++ b/index.css
@@ -1,9 +1,13 @@
+html
+{
+	column-count: 3;
+    column-rule: 1px solid #ccc;
+}
 figure
 {
 	text-align: center;
 	column-span: all;
 }
-
 h1 
 {
 	text-align: center;
@@ -13,7 +17,6 @@ h1
     margin-top: 0.1em;
 	margin-bottom: 0.1em;
 }
-
 aside
 {
 	text-align: center;
@@ -25,31 +28,32 @@ aside
 	background-color: rgb(245,245,245);
 	margin-bottom:1.5em;
 }
-
 body 
 {
-    column-count: 3;
-    column-rule: 1px solid #ccc;
-    font: 15px Comic Sans Ms; 
+font: 15px Comic Sans Ms; 
 }
-
-h2
-{
-    font-size: 1.2em;
-    margin-bottom: 0.1em;	
-}
-
+    
+h2	
+	{
+	font-size: 1.2em;
+    margin-bottom: 0.1em;
+	}
 p
 {
 
 }
 
-article
+h3
 {
-	text-align: center;
-	font: 20px Arial;
 	column-span: all;
-	}
+	float: center;
+}
+
+ul
+{
+	column-span: all;
+	float: center;
+}
 
 .zitaty
 	{
