--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
 html
 {
-	column-count: 3;
+	background-image: url("https://hsto.org/storage/habraeffect/ba/18/ba1804ec5c9243ce5cbb0c3c0d2e1cf7.jpg");
+	column-count: 4;
+	-webkit-column-count: 4;
     column-rule: 1px solid #ccc;
+	-webkit-column-rule: 1px solid #ccc;
+	column-width: 100px;
+	-webkit-column-width: 100px;
 	margin-left: 2px;
 }
 figure
@@ -30,8 +35,8 @@ aside
 	margin-bottom:1.5em;
 }
 body 
-{
-font: 15px Comic Sans Ms; 
+{	
+    font: 15px Comic Sans Ms; 
 }
     
 h2	
@@ -44,16 +49,11 @@ p
 
 }
 
-h3
-{
-	column-span: all;
-	float: center;
-}
-
 ul
 {
-	column-span: all;
+	column-width: 160px;
 	float: center;
+	border: 4px solid grey;
 }
 
 .zitaty
@@ -62,3 +62,20 @@ ul
 		border-top: 1px solid black;
 		border-bottom: 1px solid black;
 	}
+.vertical
+{
+	background-color: grey;
+	padding: 3px;
+	float: left;
+	margin: 0 2px 0 0;
+	writing-mode: vertical-rl;
+	transform: rotate(180deg);
+}
+footer
+{
+	column-span: all;
+	-webkit-column-span:all;
+	text-align: right;
+	margin: 10px 10px;
+}
+
