--- a/index.css
+++ b/index.css
@@ -1,12 +1,10 @@
 html
 {
 	background-image: url("https://hsto.org/storage/habraeffect/ba/18/ba1804ec5c9243ce5cbb0c3c0d2e1cf7.jpg");
-	column-count: 4;
-	-webkit-column-count: 4;
     column-rule: 1px solid #ccc;
 	-webkit-column-rule: 1px solid #ccc;
-	column-width: 100px;
-	-webkit-column-width: 100px;
+	column-width: 500px;
+	-webkit-column-width: 500px;
 	margin-left: 2px;
 }
 figure
@@ -17,11 +15,23 @@ figure
 h1 
 {
 	text-align: center;
-    font: 45px PLAYBILL;
+    font: 50px PLAYBILL;
 	letter-spacing: 7.5px;
 	column-span: all;
     margin-top: 0.1em;
 	margin-bottom: 0.1em;
+	text-shadow: 0 1px 0 #ccc,
+                 0 2px 0 #c9c9c9,
+                 0 3px 0 #bbb,
+                 0 4px 0 #b9b9b9,
+                 0 5px 0 #aaa,
+                 0 6px 1px rgba(0,0,0,.1),
+                 0 0 5px rgba(0,0,0,.1),
+                 0 1px 3px rgba(0,0,0,.3),
+                 0 3px 5px rgba(0,0,0,.2),
+                 0 5px 10px rgba(0,0,0,.25),
+                 0 10px 10px rgba(0,0,0,.2),
+                 0 20px 20px rgba(0,0,0,.15);
 }
 aside
 {
@@ -36,24 +46,48 @@ aside
 }
 body 
 {	
-    font: 15px Comic Sans Ms; 
+    font: 15px Comic Sans Ms;
 }
     
 h2	
 	{
-	font-size: 1.2em;
+	font-size: 25px;
+	letter-spacing: 2.2px;
     margin-bottom: 0.1em;
-	}
-p
-{
+	column-span: all;
+	 text-shadow:2px 8px 6px rgba(0,0,0,0.2),
+	             0px -5px 35px rgba(255,255,255,0.3);
 
+	}
+	
+h4
+{
+	font-size: 25px;
+	letter-spacing: 2.2px;
+    margin-bottom: 0.1em;
+	column-span: all;
+	text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
+	             0px -5px 35px rgba(255,255,255,0.3);
+}
+.firstlet:first-letter
+{
+	font-size: 20px;
+	font-weight: bold;
+    color: 	#000000;
+    padding: 0 2px;
+    margin: 0 2px 0 0;
+	text-shadow: 2px 2px grey
 }
 
 ul
 {
-	column-width: 160px;
-	float: center;
+	column-span: 2;
+	-webkit-column-span: 2;
+	font: 18px bold Times;
+	text-align: left;
 	border: 4px solid grey;
+	width: 370px;
+	height: 180px;
 }
 
 .zitaty
